--- a/SmartInvest/app/src/main/res/values/strings.xml
+++ b/SmartInvest/app/src/main/res/values/strings.xml
@@ -13,4 +13,12 @@
     <string name="onefund_history">Transaction History</string>
     <string name="onefund_addtran">Add Transactions</string>
 
+
+    <string name="addtrans_transdate">Transaction Date</string>
+    <string name="addtrans_transstate">Transaction State</string>
+    <string name="addtrans_transprice">Price</string>
+    <string name="addtrans_transshares">Shares</string>
+    <string name="addtrans_transamount">Amount</string>
+    <string name="addtrans_savetran">Save</string>
+
 </resources>
