--- a/SmartInvest/app/src/main/res/values/strings.xml
+++ b/SmartInvest/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="onefund_peakannualreturn">Peak Annual Return Rate </string>
     <string name="onefund_history">Transaction History</string>
     <string name="onefund_addtran">Add Transactions</string>
+    <string name="onefund_deltran">Delete</string>
 
 
     <string name="addtrans_transdate">Transaction Date</string>
