transaction amount in db designed to be positive for selling

--- a/SmartInvest/app/src/main/res/values/strings.xml
+++ b/SmartInvest/app/src/main/res/values/strings.xml
@@ -7,13 +7,15 @@
 
     <string name="onefund_avgcost">Average Cost</string>
     <string name="onefund_shares">Shares</string>
-    <string name="onefund_totalreturn">Total Return</string>
+    <string name="onefund_totalreturn">Total \nReturn</string>
     <string name="onefund_annualreturn">Annual Return Rate </string>
     <string name="onefund_peakannualreturn">Peak Annual Return Rate </string>
     <string name="onefund_history">Transaction History</string>
     <string name="onefund_addtran">Add Transactions</string>
     <string name="onefund_deltran">Delete</string>
     <string name="onefund_updatetran">Update</string>
+    <string name="onefund_currprice">Price</string>
+    <string name="onefund_nodetail">NaN</string>
 
 
     <string name="savetrans_transdate">Transaction Date</string>
